+: wspolczesne rozwiazania, rzeczyyy....

--- a/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
+++ b/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
@@ -193,20 +193,36 @@ Atak może być w różnych scenariuszach mniej lub bardziej skuteczny a, podejm
 Jako, że każda gra może pominąć niektóre popularne aspekty gier RTS, projekt dołączony do niniejszej pracy skupiał się będzie szczególnie na problemie pozycjonowania jednostek przez algorytm sztucznej inteligencji w czasie rzeczywistym jako odpowiedź na decyzje gracza. Pominięte zostaną wszelakie systemy ekonomiczne oraz rozważania dotyczące używania unikalnych zdolności jednostek.
 %====================================== AI W RTS ======================================
 \section {Sztuczna inteligencja w grach RTS}
-Podczas projektowania AI w grach często spotykanym rozwiązaniem jest stworzenie systemu, który niekoniecznie poprawnie symuluje decyzje człowieka, ale raczej skupia się na odczuciach gracza i pozytywnym odbiorze gry przez niego. Okazuje się to szczególnie uproszczone przy zastosowaniu drzew decyzyjnych. Współczesne silniki posiadają wbudowane narzędzia do implementacji tego typu rozwiązań oraz całą gamę assetów i tool'ów utworzonych przez społeczność game developerską. Sprawdza się to głównie dlatego, że bardzo łatwo wyobrazić sobie i zasymulować decyzje komputera przy pomocy maszyny stanów. Drzewa decyzyjne umożliwiają łatwą implementację zachowań dla różnych stanów oraz przejść pomiędzy nimi na podstawie zmiennych w czasie rzeczywistym warunków. 
+Podczas projektowania AI w grach często spotykanym rozwiązaniem jest stworzenie systemu, który niekoniecznie poprawnie symuluje decyzje człowieka, ale raczej skupia się na odczuciach gracza i pozytywnym odbiorze gry przez niego. Okazuje się to szczególnie uproszczone przy zastosowaniu drzew decyzyjnych. Współczesne silniki posiadają wbudowane narzędzia do implementacji tego typu rozwiązań oraz całą gamę assetów i tool'ów utworzonych przez społeczność game developerską. Sprawdza się to głównie dlatego, że bardzo łatwo wyobrazić sobie i zasymulować decyzje komputera przy pomocy maszyny stanów. Drzewa decyzyjne umożliwiają łatwą implementację zachowań dla różnych stanów oraz przejść pomiędzy nimi na podstawie zmiennych w czasie rzeczywistym warunków.
+
+Ze strony programistycznej zadanie twórców sztucznej inteligencji polega przede wszystkim na zaimplementowaniu różnych rodzajów rozkazów zaprojektowanych wcześniej przez projektantów gry. Następnym krokiem jest implementacja podejmowania decyzji przez AI. Nasz komputer ma za zadanie podjąć optymalną decyzję i następnie wydać odpowiedni rozkaz. W grach typu RTS zaimplementowane muszą zostać (zależne lub niezależne od siebie) oddzielne rodzaje algorytmów do: 
+
+\begin{itemize}
+\item[--] poruszania się jednostkami - te dotyczą analizy poyzcji wrogów - w praktyce obliczenia z użyciem wektorów. Tutaj obszerny temat zajmuje problem wyszukiwania drogi (ang. pathfinding) i optymalizacja algorytmów z nim związanych. Powszechnie stosowany jest algorytm A* (czyt. a gwiazdka) i różne jego modyfikacje polegające w ogólności na wyszukiwaniu najkrótszej drogi w grafie. 
+\item[--] zarządzania ekonomią - te analizują zmienne reprezentujące przeróżne aspekty rynkowe mogące istnieć w grze. Podjęcie decyzji o danym rozkazie może tutaj polegać na osiągnięciu pewnych wartości - np. decyzja o podjęciu inwestycji, gdy dochody spadną, decyzja o zwiększeniu siły armii, gdy wojska przeciwnika stały się zbyt wartościowe i dla nas groźne. Mogą być one zdefiniowane wcześniej lub obliczane na bieżąco w czasie rzeczywistym na podstawie dowolnie zaimplementowanych wzorów.
+\item[--] dyplomacji - np. losowo imitującej zachowania innych graczy dla lepszego UX użytkownika.
+\item[--] rozwoju technologii - dotyczy podobnego problemu jak zarządzanie ekonomią. Większość gier stosuje przystępny model drzew technologicznych, gdzie wynalezienie pewnej technologii odblokowuje kolejne, bardziej zaawansowane. Tutaj implementacja może być bardzo uproszczona - polegać może na wcześniejszym zakodowaniu ścieżki poszczególnych decyzji i zczytywaniu z niej lub nawet na losowym wyborze kolejnych kroków. To ostatnie rozwiązanie możliwe jest jednak tylko, jeżeli pomiędzy różnymi krokami zachowany jest balans.
+\end{itemize}
 
 
-tu wiecej info o temacie trzeba
-
-
-asd
 %====================================== Współczesne rozwiązania=================================
 \section {Współczesne rozwiązania} 
 Gdy mamy do czynienia z grą typu szachy - gdzie dwóch graczy o równych szansach startuje do walki, algorytmy AI muszą być bardzo skomplikowane i poprawnie wartościować poszczególne decyzje. Gdy gra polega raczej na przechodzeniu kolejnych misji optymalnym rozwiązaniem jest oskryptowanie każdej. Ponieważ maszyny stanów mogą bardzo dokładnie symulować pewne sekwencyjne, zdefiniowane i powtarzające się akcje, sprawdzają się one bardzo dobrze w sytuacjach, gdzie gracz jest prowadzony przez rozgrywkę według planu twórców. Dlatego też misje, mapy w grach łatwo można oskryptować według wymyślonego modelu przy pomocy drzew decyzyjnych. Dotyczy to zwykle rutynowych akcji wykonywanych przez sztuczną inteligencję. Przykładami mogą być: atak, wysłanie zwiadu, wybudowanie budynku lub zakup surowców raz na określony czas. Takie rozwiązanie jest bardzo łatwe do modelowania i testowania. Dzięki temu programista może łatwo dopasować implementację do zaprojektowanego modelu. 
 
-Problem rośnie jednak, gdy model gry pozwala na coraz więcej możliwych decyzji do podjęcia i sztuczna inteligencja musi raczej odpowiadać na dane nawet parudziesięciokrotnie w ciągu każdej sekundy, niż egzekwować kolejne rozkazy z oskryptowanej mapy. Wtedy właśnie stosowanym rozwiązaniem może być sieć neuronów.
+Problem rośnie jednak, gdy model gry pozwala na coraz więcej możliwych decyzji do podjęcia i sztuczna inteligencja musi raczej odpowiadać na dane nawet parudziesięciokrotnie w ciągu każdej sekundy, niż egzekwować kolejne rozkazy z oskryptowanej mapy. 
 
-Dzięki możliwości analizy milionów strategii, sieci neuronowe okazały się być wyzwaniem nawet dla profesjonalnych graczy. Współczesne boty stworzone do grania w popularną grę rywalizacyjną Starcraft mając okazję zmierzyć się z mistrzami świata, wciąż przegrywały zwykle z niewielką jednak przewagą ludzi.
+Poniżej wymienienione zostały podstawowe koncepty używane współcześnie:
+\begin{itemize}
+\item[--] sieci neuronowe - jest to wyjątkowe i zaawansowane rozwiązanie, które daje niezastąpione możliwości. Ich szczególną zaletą jest możliwość samodzielnego uczenia się przez program. Na chwilę obecną nie uzyskało jednak wielu zastosowań w branży produkcji gier komputerowych. Spowodowane jest to głównie nieprzewidywalnością algorytmów opartych na sieciach oraz trudnością w ich debugowaniu. Mogą być jednak użyteczne w przypadku problemów nieliniowych, które ciężko rozwiązać tradycyjnymi metodami. Głównie stosuje się je jednak w celach naukowych i hobbystycznym tworzeniu botów do istniejących gier raczej, niż w komercyjnych produkcjach. Dzięki możliwości analizy ogromnej ilości różnych strategii, sieci neuronowe okazały się być wyzwaniem nawet dla profesjonalnych graczy. Współczesne boty stworzone do grania w popularną grę strategiczną Starcraft mając okazję zmierzyć się z mistrzami świata, wciąż przegrywały zwykle, z niewielką jednak przewagą ludzi.
+\item[--]  systemy oparte na zasadach (ang. ,,rule based systems") - ogólny termin określający ogólny zbiór danych i zasad ich interpretowania. Są one najobszerniej używane w programowaniu sztucznej inteligencji, zarówno w grach jak i w innych programach używających AI. Możliwości implementacji takiego systemu są nieograniczone i dają programiście duże pole do popisu. Szczególnym elementem jest tutaj silnik oparty na wnioskowaniu z danych zapisanych w pamięci. Programista może oczywiście wcześniej zaprojektować dane (np. pod podstacią klas jako kontenerów na nie). W ogólności zadaniem silnika jest podejmowanie konkretnych, optymalnych działań. W projekcie, który jest częścią niniejszej pracy skorzystałem z tego rozwiązania. Aby wnioskować w czasie rzeczywistym, algorytmy sztucznej inteligencji wywołoywane są w funkcji Tick(), a ta z kolei wywoływana jest za pośrednictwem samego silnika Unreal Engine 4.
+\item[--] maszyny stanów, automaty skończone (ang. finite state machines) - teoretycznie można zaliczyć je do systemów opartych na zasadach, jednak obszerność zastosowania oraz ich unikalność zasługuje na odrębny opis. Zwięźle omawiając, maszyna stanów to system złożony z wielu stanów i przejść pomiędzy nimi. Elementy te, można dowolnie definiować. Każdy stan może odpowiadać za zbiór zachowań na wejściu maszyny do tego stanu, na wyjściu ze stanu oraz podczas trwania pomiędzy tymi wydarzeniami. Przejście pomiędzy stanami również można dowolnie determinować jednak najczęściej stosuje się do tego programistyczne delegaty i eventy. Jest to szczególnie przystępne rozwiązanie, kiedy mamy jasno zdefiniowany zbiór ciągłych, sekwencyjnych rodzajów zachowań AI. To możemy zaobserowować w grach typu FPS, RPG, logicznych. Maszyny te są - poza problemami związanymi z AI - powszechnie stosowane jako programistyczne modele i wzorce projektowe. Obecne silniki do gier używają ich nawet do obsługi animacji. Każda animacja jest stanem, z którego przechodzimy do kolejnych.  Przejścia pomiędzy stanami powodują tutaj mieszanie się (ang. ,,animation blending") kolejnych animacji w celu płynnego, naturalnego ich wyglądu.
+\end{itemize}
+
+
+
+
+
+
 
 %======================================Zarys problemu pracy======================================
 \section {Zarys problemu pracy}
