--- a/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
+++ b/Sztuczna inteligencja na przykładzie prototypu gry strategicznej.tex
@@ -813,29 +813,20 @@ Projekt będący częścią niniejszej pracy umożliwia przetestowanie implement
 
 Poruszane w pracy problemy dają duży potencjał do tworzenia ścieżek rozwoju dla współczesnej sztucznej inteligencji w grach czasu rzeczywistego. Jest to niesamowicie wartościowy temat dla firm i społeczności związanych z tworzeniem gier, który może przenieść swoje zastosowania w inne branże informatyczne i przemysłowe.
 
-\section{do usuniecia}
 
-Cytat z przypisem "cośtam"$^{\cite{long-short}}$ a tutaj aktywny link: \href{http://fais.uj.edu.pl}{http://fais.uj.edu.pl}.\\
-
-\begin{figure}[h!]
-\includegraphics[width=\textwidth]{neuron}
-\caption{Tak wygląda ilustracja z przypisem$^{\cite{aima}}$.}
-\end{figure}
 
 
 \cleardoublepage
 \addcontentsline{toc}{chapter}{Bibliografia}
 \begin{thebibliography}{9}
 
-\bibitem{aima} Michael Buro, \emph{Real-Time Strategy Games: A New AI Research Challenge.}, 2003.
+\bibitem{buro} Michael Buro, \emph{Real-Time Strategy Games: A New AI Research Challenge.}, Edmonton 2003.
 
-\bibitem{aima} Michael Buro and Timothy Furtak, \emph{RTS Games as Test–Bed for Real–Time AI Research}, 2003.
+\bibitem{buro} Michael Buro and Timothy Furtak, \emph{RTS Games as Test–Bed for Real–Time AI Research}, Edmonton 2003.
 
 \bibitem{niel} Michael Nielsen, \emph{Neural Networks and Deep Learning}, 2017, \href{http://neuralnetworksanddeeplearning.com}{http://neuralnetworksanddeeplearning.com}.
 
-\bibitem{long-short} S. Hochreiter, S. Schmidhubear, \emph{Long Short-Term Memory}, 1997.
-
-\bibitem{wiki} Wikipedia, \emph{Activation function}, \href{https://en.wikipedia.org/wiki/Activation_function}{https://en.wikipedia.org/wiki/Activation\_function}.
+\bibitem{marcponsen} Marc Ponsen, \emph{Improving adaptive game ai with evolutionary learning}, Delft 2004.
 
 
 
